2002-06-29	<mschimek@users.sf.net>

	* Switched from gtk-doc to doxygen (sigh of relief...). Cleanup.

2002-06-19	<mschimek@users.sf.net>

	* common, macros: Contents moved elsewhere, dirs removed.

2002-06-17	<mschimek@users.sf.net>

	* m4, po, config.rpath: Added because cannot use autogen.sh
	  gettextize --force since gettext 0.11. The fine hack insists
	  on updating already updated Makefile.am's and configure.in.
	* po/Rules-quot: s/PACKAGE VERSION/... because msgfmt complains.

2002-06-16  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add intl, m4.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add m4/Makefile.

2002-06-14	<mschimek@users.sf.net>

	* ffmpeg/b_ffmpeg.c: Options.
	* test/README: Added.
	* src/codec.h, doc: Added missing rte_codec_remove_codec()
	  prototype.

2002-06-13	<mschimek@users.sf.net>

	* src/context.h: Added seek flag to rte_context_info.
	* src/codec.c, src/context.c: vbi_codec|context_info_keyword()
	  cut option string off the keyword, a convenience.

2002-06-06	<mschimek@users.sf.net>

	* ffmpeg: Updated source to version 0.4.6 (CVS 2002-05-15).
	* ffmpeg/b_ffmpeg.h: Added.
	* ffmpeg/b_ffmpeg.c: Old code completely removed, new version
	  for rte 0.5, cloned and adapted from b_mp1e.c. Unfinished.

2002-05-26	<mschimek@users.sf.net>

	* src/codec.h: Corrected rte_stream_type enum to start at 1, not 0.

2002-05-09	<mschimek@users.sf.net>

	* common, configure.in: Dereferenced symlinked files, was useful
	  at one time but now just a nuisance.

2002-04-10	<mschimek@users.sf.net>

	* src/Makefile.am: Removed version number from library name.
	  That's nothing we need to have, but it makes each release
	  binary incompatible with each other, even if we merely
	  added new features.
	* macros/autogen.sh: Cleaned up.
	* src/rte.c, src/rte.h: Added discard output function.
	* docs/Makefile.am: Scan only librte.h.

2002-03-22	<mschimek@users.sf.net>
